fix layout on small screens

--- a/src/components/Toolbar/Toolbar.scoped.vue.css
+++ b/src/components/Toolbar/Toolbar.scoped.vue.css
@@ -8,6 +8,7 @@
   padding: 0 !important;
   border-radius: 4px;
   background-color: rgba(255, 255, 255, .25);
+  min-width: 100px;
 }
 
 .search-field {
@@ -15,6 +16,7 @@
   -webkit-text-fill-color: white !important;
   mso-fills-color: white !important;
   mso-scheme-fill-color: white !important;
+  min-width: 50px;
 }
 
 .result-span {
